--- a/src/Presentation/Views/Authors/Authors.cshtml
+++ b/src/Presentation/Views/Authors/Authors.cshtml
@@ -25,7 +25,7 @@
 @section Cards {
     @foreach (var author in Model)
     {
-        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 author-card" data-name="@author.Name" data-dateofbirth="@author.DateOfBirth" data-isalive="@author.IsAlive" data-active="@(!author.DeletedDate.HasValue)" href="/Books/Authors/@author.Id" style="text-decoration:none; color:black">
+        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 list-card" data-name="@author.Name" data-dateofbirth="@author.DateOfBirth" data-isalive="@author.IsAlive" data-active="@(!author.DeletedDate.HasValue)" href="/Books/Authors/@author.Id" style="text-decoration:none; color:black">
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@author.Name</span>
@@ -57,7 +57,7 @@
 
 
 @section Table {
-    <table id="authorTable" class="table table-striped">
+    <table id="table" class="table table-striped">
         <thead>
             <tr>
                 <th>Name</th>
@@ -71,7 +71,7 @@
         <tbody>
             @foreach (var author in Model)
             {
-            <tr class="author-row" data-name="@author.Name" data-dateofbirth="@author.DateOfBirth" data-isalive="@author.IsAlive" data-active="@(!author.DeletedDate.HasValue)">
+            <tr class="table-row" data-name="@author.Name" data-dateofbirth="@author.DateOfBirth" data-isalive="@author.IsAlive" data-active="@(!author.DeletedDate.HasValue)">
                     <td>@author.Name</td>
                     <td class="table-biography">@Truncate(author.Biography, 50)</td>
                     <td>@author.DateOfBirth.ToShortDateString()</td>
