--- a/src/Presentation/Views/Books/Books.cshtml
+++ b/src/Presentation/Views/Books/Books.cshtml
@@ -20,7 +20,7 @@
 @section Cards {
     @foreach (var book in Model)
     {
-        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 book-card" data-title="@book.Title" data-releasedate="@book.OriginalReleaseDate" data-active="@(!book.DeletedDate.HasValue)" href="/Books/@book.Id" style="text-decoration:none; color:black">
+        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 list-card" data-title="@book.Title" data-releasedate="@book.OriginalReleaseDate" data-active="@(!book.DeletedDate.HasValue)" href="/Books/@book.Id" style="text-decoration:none; color:black">
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@book.Title</span>
@@ -61,7 +61,7 @@
 }
 
 @section Table {
-    <table id="bookTable" class="table table-striped">
+    <table id="table" class="table table-striped">
         <thead>
             <tr>
                 <th>Title</th>
@@ -77,7 +77,7 @@
         <tbody>
             @foreach (var book in Model)
             {
-                <tr class="book-row" data-title="@book.Title" data-releasedate="@book.OriginalReleaseDate" data-active="@(!book.DeletedDate.HasValue)">
+                <tr class="table-row" data-title="@book.Title" data-releasedate="@book.OriginalReleaseDate" data-active="@(!book.DeletedDate.HasValue)">
                     <td>@book.Title</td>
                     <td>@string.Join(", ", book.AuthorNames)</td>
                     <td>@book.OriginalLanguageName</td>
