--- a/src/Presentation/Views/Languages/Languages.cshtml
+++ b/src/Presentation/Views/Languages/Languages.cshtml
@@ -17,7 +17,7 @@
 @section Cards {
     @foreach (var language in Model)
     {
-        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 language-card" data-name="@language.Name" data-active="@(!language.DeletedDate.HasValue)" href="/Books/Languages/@language.Id" style="text-decoration:none">
+        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 list-card" data-name="@language.Name" data-active="@(!language.DeletedDate.HasValue)" href="/Books/Languages/@language.Id" style="text-decoration:none">
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@language.Name</span>
@@ -36,7 +36,7 @@
 }
 
 @section Table {
-    <table id="languageTable" class="table table-striped">
+    <table id="table" class="table table-striped">
         <thead>
             <tr>
                 <th>Name</th>
@@ -47,7 +47,7 @@
         <tbody>
             @foreach (var language in Model)
             {
-                <tr class="language-row" data-name="@language.Name" data-active="@(!language.DeletedDate.HasValue)">
+                <tr class="table-row" data-name="@language.Name" data-active="@(!language.DeletedDate.HasValue)">
                     <td>@language.Name</td>
                     <td>
                         @if (!language.DeletedDate.HasValue)
