--- a/src/Presentation/Views/Books/Book.cshtml
+++ b/src/Presentation/Views/Books/Book.cshtml
@@ -118,54 +118,11 @@
     <script src="~/js/Books/Book.js"></script>
 
     <script>
-        var id = '@Model.Id';
-        var userAction = '@userAction';
-
-        document.addEventListener('DOMContentLoaded', function () {
-            // Initialize Choices.js
-            const languageChoices = new Choices('#OriginalLanguageId', {
-                removeItemButton: true,
-                searchEnabled: true,
-                placeholder: true,
-                placeholderValue: 'Select a language',
-            });
-
-            const genreChoices = new Choices('#GenreIds', {
-                removeItemButton: true,
-                searchEnabled: true,
-                placeholder: true,
-                placeholderValue: 'Select genres',
-            });
-
-            const authorChoices = new Choices('#AuthorIds', {
-                removeItemButton: true,
-                searchEnabled: true,
-                placeholder: true,
-                placeholderValue: 'Select authors',
-            });
-
-            // Load data for dropdowns and set preselected values
-            function loadDropdownData(url, choicesInstance, preselectedValues) {
-                fetch(url)
-                    .then(response => response.json())
-                    .then(data => {
-                        const choices = data.map(item => ({
-                            value: item.id,
-                            label: item.name,
-                            selected: preselectedValues.includes(item.id)
-                        }));
-                        choicesInstance.setChoices(choices, 'value', 'label', true);
-                    });
-            }
-
-            const preselectedGenres = @Html.Raw(Json.Serialize(Model.GenreIds));
-            const preselectedAuthors = @Html.Raw(Json.Serialize(Model.AuthorIds));
-            const preselectedLanguage = @Model.OriginalLanguageId;
-
-            loadDropdownData('/Books/Languages/GetActiveLanguagePreviews', languageChoices, [preselectedLanguage]);
-            loadDropdownData('/Books/Genres/GetActiveGenrePreviews', genreChoices, preselectedGenres);
-            loadDropdownData('/Books/Authors/GetActiveAuthorPreviews', authorChoices, preselectedAuthors);
-        });
+        const id = '@Model.Id';
+        const userAction = '@userAction';
+        const preselectedGenres = @Html.Raw(Json.Serialize(Model.GenreIds));
+        const preselectedAuthors = @Html.Raw(Json.Serialize(Model.AuthorIds));
+        const preselectedLanguage = @Model.OriginalLanguageId;
     </script>
 }
 
