changed bunch of things, still working on paging, searching, filtering, sorting, because it proved to be much more complex than i thought

--- a/src/Presentation/Views/Shared/_CardTableLayout.cshtml
+++ b/src/Presentation/Views/Shared/_CardTableLayout.cshtml
@@ -16,6 +16,8 @@
         </div>
     </div>
 
+    @RenderSection("Pagination", required: false)
+
     <div class="myfab-container">
         @RenderSection("Fab", required: false)
     </div>
