--- a/src/Presentation/Views/Books/Books.cshtml
+++ b/src/Presentation/Views/Books/Books.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Nika1337.Library.Presentation.Models.Books.BookViewModel>
+﻿@model Nika1337.Library.Domain.RequestFeatures.PagedList<Nika1337.Library.Presentation.Models.Books.BookViewModel>
 
 @{
     ViewData["Title"] = "Books";
@@ -10,7 +10,6 @@
         { "releaseDate", "Release Date: Ascending" },
         { "releaseDateDesc", "Release Date: Descending" }
     };
-
 }
 
 @section SortFilterSearchSwitch {
@@ -101,6 +100,58 @@
             }
         </tbody>
     </table>
+}
+
+@section Pagination {
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            @if (Model.MetaData.HasPrevious)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="@Url.Action("Books", new { pageNumber = Model.MetaData.CurrentPage - 1, pageSize = Model.MetaData.PageSize })" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            }
+            else
+            {
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            }
+
+            @for (var i = 1; i <= Model.MetaData.TotalPages; i++)
+            {
+                if (i == Model.MetaData.CurrentPage)
+                {
+                    <li class="page-item active"><a class="page-link" href="#">@i</a></li>
+                }
+                else
+                {
+                    <li class="page-item"><a class="page-link" href="@Url.Action("Books", new { pageNumber = i, pageSize = Model.MetaData.PageSize })">@i</a></li>
+                }
+            }
+
+            @if (Model.MetaData.HasNext)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="@Url.Action("Books", new { pageNumber = Model.MetaData.CurrentPage + 1, pageSize = Model.MetaData.PageSize })" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            }
+            else
+            {
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            }
+        </ul>
+    </nav>
 }
 
 @section Fab {
