--- a/src/Presentation/Views/Shared/_CardTableLayout.cshtml
+++ b/src/Presentation/Views/Shared/_CardTableLayout.cshtml
@@ -10,7 +10,7 @@
         @RenderSection("Cards", required: true)
     </div>
 
-    <div id="tableView">
+    <div id="tableView" class="d-none">
         <div class="table-responsive d-flex justify-content-center">
             @RenderSection("Table", required: true)
         </div>
