--- a/src/Presentation/Views/Shared/_PaginationPartial.cshtml
+++ b/src/Presentation/Views/Shared/_PaginationPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Nika1337.Library.Domain.RequestFeatures.MetaData
 
-<nav aria-label="Page navigation">
+<nav aria-label="Page navigation" class="mb-4">
     <ul class="pagination">
         @if (Model.HasPrevious)
         {
