--- a/src/Presentation/Views/Books/Books.cshtml
+++ b/src/Presentation/Views/Books/Books.cshtml
@@ -6,7 +6,7 @@
 }
 
 @section SortFilterSearchSwitch {
-    @await Html.PartialAsync("_SortFilterSearchSwitchPartial")
+    @await Html.PartialAsync("_SortFilterSearchSwitchPartial", Model.MetaData)
 }
 
 @section Cards {
@@ -95,11 +95,6 @@
     </table>
 }
 
-@section Pagination {
-    @await Html.PartialAsync("_PaginationPartial", Model.MetaData)
-}
-
-
 @section Fab {
     <a href="/Books/AddBook" class="btn btn-primary btn-lg shadow-sm myfab">
         Add Book
@@ -107,9 +102,7 @@
 }
 
 @section Scripts {
-    <script src="~/js/Shared/SortFilterSearchSwitchPagination.js"></script>
-}
-
-@section Styles {
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
+    <script>
+        const viewName = "Books";
+    </script>
 }
