--- a/src/Presentation/Views/Languages/Languages.cshtml
+++ b/src/Presentation/Views/Languages/Languages.cshtml
@@ -2,12 +2,13 @@
 
 @{
     ViewData["Title"] = "Languages";
-    Layout = "_CardTableLayout";
+    Layout = "_ServerSideCardTableLayout";
 }
 
-@section SortFilterSearchSwitch {
-    @await Html.PartialAsync("_SortFilterSearchSwitchPagingPartial", Model.MetaData)
+@section Paging {
+    @await Html.PartialAsync("_PagingPartial", Model.MetaData)
 }
+
 
 @section Cards {
     @foreach (var language in Model)
