--- a/src/Presentation/Views/Genres/Genres.cshtml
+++ b/src/Presentation/Views/Genres/Genres.cshtml
@@ -2,11 +2,12 @@
 
 @{
     ViewData["Title"] = "Genres";
-    Layout = "_CardTableLayout";
+    Layout = "_ServerSideCardTableLayout";
 }
 
-@section SortFilterSearchSwitch {
-    @await Html.PartialAsync("_SortFilterSearchSwitchPagingPartial", Model.MetaData)
+
+@section Paging {
+    @await Html.PartialAsync("_PagingPartial", Model.MetaData)
 }
 
 @section Cards {
