updated pagingPartial to handle situations when there are too many pages for the screen.

--- a/src/Presentation/Views/Shared/_PagingPartial.cshtml
+++ b/src/Presentation/Views/Shared/_PagingPartial.cshtml
@@ -19,15 +19,43 @@
             </li>
         }
 
-        @for (var i = 1; i <= Model.TotalPages; i++)
-        {
-            if (i == Model.CurrentPage)
+        @{
+            const int adjacentPages = 2;
+            int startPage = Math.Max(1, Model.CurrentPage - adjacentPages);
+            int endPage = Math.Min(Model.TotalPages, Model.CurrentPage + adjacentPages);
+
+            if (startPage > 1)
             {
-                <li class="page-item active"><a class="page-link" href="#">@i</a></li>
+                <li class="page-item @(Model.CurrentPage == 1 ? "active" : "")">
+                    <a class="page-link" href="#" onclick="changePage(1)">1</a>
+                </li>
+                if (startPage > 2)
+                {
+                    <li class="page-item disabled"><span class="page-link">...</span></li>
+                }
             }
-            else
+
+            for (var i = startPage; i <= endPage; i++)
             {
-                <li class="page-item"><a class="page-link" href="#" onclick="changePage(@i)">@i</a></li>
+                if (i == Model.CurrentPage)
+                {
+                    <li class="page-item active"><a class="page-link" href="#">@i</a></li>
+                }
+                else
+                {
+                    <li class="page-item"><a class="page-link" href="#" onclick="changePage(@i)">@i</a></li>
+                }
+            }
+
+            if (endPage < Model.TotalPages)
+            {
+                if (endPage < Model.TotalPages - 1)
+                {
+                    <li class="page-item disabled"><span class="page-link">...</span></li>
+                }
+                <li class="page-item @(Model.CurrentPage == Model.TotalPages ? "active" : "")">
+                    <a class="page-link" href="#" onclick="changePage(@Model.TotalPages)">@Model.TotalPages</a>
+                </li>
             }
         }
 
